syntax = "proto3";
option go_package = "octavius/internal/pkg/protofiles/client_cp";

import "internal/pkg/protofiles/client_cp/metadata_messages.proto";
import "internal/pkg/protofiles/client_cp/job_messages.proto";

service ClientCPServices{
   rpc GetStreamLogs(RequestForStreamLog) returns (stream Log);
   rpc ExecuteJob(RequestForExecute) returns (Response);
   rpc PostMetadata(RequestToPostMetadata) returns (MetadataName);
   rpc GetAllMetadata(RequestToGetAllMetadata) returns (MetadataArray);
   rpc GetJobList(RequestForGetJobList) returns (JobList);
}